# flux-notify

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: Dockerfile  cd.yaml  cd.yml  ci.yml  release.yml
lib/api/: Cargo.toml  build.rs
lib/api/src/: events.proto  lib.rs  notify.proto  push.proto  pushes.proto
lib/migration/: Cargo.toml
lib/migration/src/: lib.rs  m20250218_160814_create_web_pushes.rs
settings/: default.toml
src/: app.rs  main.rs  notifier.rs  push_api.rs  tracing.rs
src/app/: error.rs  events.rs  notify.rs  push.rs  pushes.rs  settings.rs  state.rs
src/app/events/: messaging.rs  service.rs  settings.rs
src/app/notify/: grpc.rs  messaging.rs  settings.rs  state.rs
src/app/push/: grpc.rs  repo.rs  service.rs  settings.rs
src/app/push/repo/: web_push.rs
src/app/pushes/: grpc.rs  messaging.rs  repo.rs  service.rs  settings.rs  state.rs  vapid.rs
src/app/pushes/repo/: web_push.rs
