[package]
name = "flux-notify"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["lib/api", "lib/migration"]
resolver = "2"

[dependencies]
flux-notify-api = { path = "lib/api" }
flux-users-api = { git = "https://github.com/thefluxapp/flux-users.git" }
flux-messages-api = { git = "https://github.com/thefluxapp/flux-messages.git" }
flux-lib = { git = "https://github.com/thefluxapp/flux-lib.git" }

thiserror = "2.0.14"
config = { version = "0.15", default-features = false, features = ["toml"] }
uuid = { version = "1.18.0", features = ["v7"] }
chrono = "0.4.41"
log = "0.4.27"
jsonwebtoken = "9.3.1"
ece = "2.3.1"
base64 = "0.22.1"
p256 = "0.13.2"

axum = "0.8.4"

async-nats = "0.42.0"

tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
] }

prost = "0.14.1"
prost-types = "0.14.1"

tonic = { version = "0.14.1", default-features = false, features = ["channel"] }
tonic-prost = "0.14.1"
tonic-health = "0.14.1"
tonic-reflection = "0.14.1"

sea-orm = { version = "1.1.14", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
bytes = "1.10.1"
